--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montaga&family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Kdam+Thmor+Pro&family=Rubik:wght@500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Montserrat, Montaga;
+  --paragraph-font: Rubik, Kadam-Thmor-Pro, Dosis;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #f6f4e8;  /* headlines on a white background */ 
