--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,19 +8,19 @@ body {
 }
 .home-grid{
     display: grid;
-    grid-template-columns: 1fr, 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
 }
 .home-grid-dining{
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 100px 100px 100px
 
 }
 .logo{
     width: 80px;
 }
-.card-img{
+.card-img, .card-img1, .card-img2, .card-img3{
     width: 200px;
 }
 
@@ -51,7 +51,7 @@ nav a {
     max-width: 1600px;
     margin:0 auto;
 }
-#hero {
+#hero, hero1 {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
 }
@@ -90,7 +90,6 @@ nav a {
 }
 #hero-msg h2{
     font-size: 1em;
-   
 }
 
 .button{
@@ -191,4 +190,50 @@ padding-bottom: 15px;
 .banner-three{
     grid-column: 1/10;
     grid-row: 3/3;
+}
+
+#banner-one1{
+    grid-column: 2/10;
+    grid-row: 2/6;
+    display: grid;
+}
+
+#banner-two1{
+    grid-column: 2/10;
+    grid-row: 6/9;
+    display: grid;
+    padding: 20px 0 20px 0;
+}
+#banner-three1{
+    grid-column: 2/10;
+    grid-row: 9/9;
+    display: grid;
+    padding: 0 0 20px 0;
+}
+.map-frame{
+    grid-column: 9/10;
+    grid-row: 1/2;
+}
+
+#banner-one1 h2{
+    grid-column: 2/10;
+    grid-row: 1/6;
+    text-align: left
+}
+
+#banner-two1 h2{
+    grid-column: 2/10;
+    grid-row: 1/6;
+    text-align: left
+
+}
+#banner-three1 h2{
+    grid-column: 2/10;
+    grid-row: 1/9;
+    text-align: left
+
+}
+#banner-one1 p, #banner-two1 p, #banner-three1 p{
+    font-weight: lighter;
+    font-size: medium;
 }
