--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,13 @@ body {
     grid-template-rows: 100px 100px 100px
 
 }
+.home-grid-dining3{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
+    grid-template-rows: auto;
+    font-size: 9px;
+    margin: 70px;
+}
 .logo{
     width: 80px;
 }
@@ -116,6 +123,7 @@ nav a {
     grid-column: 1/11;
     grid-row: 4/9;
 }
+
 footer {
     font-size: 1.2em;
     background-color: #e59560;
@@ -236,4 +244,51 @@ padding-bottom: 15px;
 #banner-one1 p, #banner-two1 p, #banner-three1 p{
     font-weight: lighter;
     font-size: medium;
+}
+
+#banner-one3{
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+#banner-two3{
+    grid-column: 4/5;
+    grid-row: 2/3;
+
+}
+#banner-three3{
+    grid-column: 6/7;
+    grid-row: 2/3;
+
+}
+#banner-four3{
+    grid-column: 8/9;
+    grid-row: 2/3;
+}
+.card-img{
+    border: 5px solid #bacec1;
+    transition: transform .5s;
+}
+
+
+.amount{
+    list-style-type: none;
+    display: flex;
+    max-width: 800px;
+    background: #bacec1;
+    margin: auto;
+    position: relative;
+    top: -60px;
+}
+.amount > li > div{
+    text-align: center;
+    margin-top: 30px;
+    height: 30px;
+}
+.amount > li:not(:last-child) > div{
+    border-right: 1px solid grey;
+}
+
+.amount > li{
+    flex: 1;
+    height: 120px;
 }
