--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Kdam+Thmor+Pro&family=Rubik:wght@500&display=swap');
 body {
-    background-color: #f6f4e8; 
     margin: 0;
     padding: 0;
     font-family: Rubik, Kadam-Thmor-Pro, Dosis;
@@ -8,7 +7,7 @@ body {
 }
 .home-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
 }
 .home-grid-dining{
@@ -19,7 +18,7 @@ body {
 }
 .home-grid-dining3{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 2fr 1fr;
     grid-template-rows: auto;
     font-size: 9px;
     margin: 70px;
@@ -121,7 +120,7 @@ nav a {
     height: 800px;
     background-color: #f6f4e8;
     grid-column: 1/11;
-    grid-row: 4/9;
+    grid-row: 1/11;
 }
 
 footer {
@@ -133,7 +132,9 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
-} 
+    margin-top: 200px;
+
+    } 
 footer a{
     color: black;
     text-align: center;
@@ -142,19 +143,21 @@ footer a{
 .msg{
 background-color: #bacec1;
 padding: 30px;
-grid-column: 7/10;
-grid-row: 3/3;
+grid-column: 6/10;
+grid-row: 2/3;
 box-shadow: 5px 5px 10px black;
-margin-top: 100px;
+margin: auto;
+
 }
 
 .msg1{
     background-color: #bacec1;
     padding: 35px;
-    grid-column: 7/10;
-    grid-row: 6/6;
+    grid-column: 6/10;
+    grid-row: 4/5;
     box-shadow: 5px 5px 10px black;
-    margin-top: 100px;
+    margin: auto;
+
     }
 .msg h2, .msg1 h2{
 color: white;
@@ -169,18 +172,19 @@ padding-bottom: 15px;
 .restaurants {
     width: 80%;
     box-shadow: 5px 5px 10px black;
-    grid-column: 3/7;
-    grid-row: 1/8;
+    grid-column: 2/5;
+    grid-row: 2/3;
     padding: 50px;
-    margin-top: 10px;
+    margin: auto;
 }
 
 .sightseeing {
     width: 80%;
     box-shadow: 5px 5px 10px black;
-    grid-column: 3/7;
-    grid-row: 6/8;
+    grid-column: 2/5;
+    grid-row: 4/5;
     padding: 50px;
+    margin: auto;
 }
 
 .banner-one{
