--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,12 @@ nav a {
     grid-column: 1/11;
     grid-row: 1/11;
 }
+#background1{
+    height: 900px;
+    background-color: #f6f4e8;
+    grid-column: 1/10;
+    grid-row: 1/11;
+}
 
 footer {
     font-size: 1.2em;
@@ -212,36 +218,38 @@ padding-bottom: 15px;
     grid-column: 2/10;
     grid-row: 6/9;
     display: grid;
-    padding: 20px 0 20px 0;
+    padding:  20px 0 20px 0;
 }
 #banner-three1{
     grid-column: 2/10;
     grid-row: 9/9;
     display: grid;
-    padding: 0 0 20px 0;
 }
 .map-frame{
     grid-column: 9/10;
     grid-row: 1/2;
+    padding: 50px;
 }
 
 #banner-one1 h2{
     grid-column: 2/10;
-    grid-row: 1/6;
-    text-align: left
+    grid-row: 1/3;
+    text-align: left;
+    font-size: large;
 }
 
 #banner-two1 h2{
     grid-column: 2/10;
     grid-row: 1/6;
-    text-align: left
-
+    text-align: left;
+    font-size: large;
 }
+
 #banner-three1 h2{
     grid-column: 2/10;
     grid-row: 1/9;
-    text-align: left
-
+    text-align: left;
+    font-size: large;
 }
 #banner-one1 p, #banner-two1 p, #banner-three1 p{
     font-weight: lighter;
@@ -293,4 +301,16 @@ padding-bottom: 15px;
 .amount > li{
     flex: 1;
     height: 120px;
+}
+.contents1{
+    font-size: 20px;
+    font-weight: lighter;
+}
+.result{
+    font-size: 23px;
+    font-weight: bold;
+}
+.elfsight-app-9760d0dd-4a7b-499f-93ab-0c1773d24223{
+grid-column: 2/10;
+padding-right: 100px;
 }
