--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,12 +16,10 @@ body {
     grid-template-rows: 100px 100px 100px
 
 }
-.home-grid-dining3{
+.home-grid-sight{
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 1fr;
-    grid-template-rows: auto;
-    font-size: 9px;
-    margin: 70px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 100px;
 }
 .logo{
     width: 80px;
@@ -129,6 +127,22 @@ nav a {
     grid-row: 1/11;
 }
 
+#background2{
+    height: 900px;
+    background-color: #f6f4e8;
+    grid-column: 1/10;
+    grid-row: 1/11;
+    margin-top: -120px;
+}
+
+#background2 > h1{
+    padding-top: 120px;
+    text-align: center;
+}
+#background2 > .goal{
+    text-align: center;
+    font-size: 20px;
+}
 footer {
     font-size: 1.2em;
     background-color: #e59560;
@@ -256,24 +270,8 @@ padding-bottom: 15px;
     font-size: medium;
 }
 
-#banner-one3{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-#banner-two3{
-    grid-column: 4/5;
-    grid-row: 2/3;
 
-}
-#banner-three3{
-    grid-column: 6/7;
-    grid-row: 2/3;
 
-}
-#banner-four3{
-    grid-column: 8/9;
-    grid-row: 2/3;
-}
 .card-img{
     border: 5px solid #bacec1;
     transition: transform .5s;
@@ -283,11 +281,12 @@ padding-bottom: 15px;
 .amount{
     list-style-type: none;
     display: flex;
-    max-width: 800px;
+    max-width: 1200px;
     background: #bacec1;
     margin: auto;
     position: relative;
     top: -60px;
+    box-shadow: 0px 0px 10px gray;
 }
 .amount > li > div{
     text-align: center;
@@ -305,6 +304,8 @@ padding-bottom: 15px;
 .contents1{
     font-size: 20px;
     font-weight: lighter;
+    margin-top: 20px;
+    text-align: center;
 }
 .result{
     font-size: 23px;
@@ -314,3 +315,48 @@ padding-bottom: 15px;
 grid-column: 2/10;
 padding-right: 250px;
 }
+
+.icons{
+    display: flex;
+    list-style-type: none;
+    height: 300px;
+    margin: auto;
+}
+.icons > li{
+    height: 100px;
+    flex: 1;
+}
+
+.icons > li:not(:last-child){
+    margin-right: 15px;
+}
+
+.icons > li > .card-img1{
+    margin-top: 50px;
+}
+
+.contents-title{
+    font-weight: bold;
+    font-size: 26px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.main-content{
+    flex: 1;
+    width: 100%;
+    margin-top: 50px;
+    font-size: 40px;
+    text-align: center;
+}
+
+.main-image{
+    text-align: center;
+    margin-top: 40px;
+}
+
+.elfsight-app-88d80c8a-291e-4cd4-8e3c-272c5e8352d7{
+    width: 100%;
+    margin-top: 50px;
+}
+
